--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <section>
             <div class="jobsText">
                 <h3>Студенты изучают:</h3>
-                <ul>
-                    <div class="job">
+                <ul class="job">
+                    <div>
                         <li>• перспективную компьютерную схемо- и системотехнику;</li>
                         <li>• микропроцессорные системы и периферийные устройства компьютеров;</li>
                         <li>• архитектуру и взаимодействие операционных систем;</li>
@@ -86,8 +86,8 @@
     <section>
         <div class="jobsText">
             <h4>Кем работают наши выпускники: </h4>
-            <ul>
-                <div class="job">
+            <ul class="job">
+                <div>
                     <li>• Разработчик ПО</li>
                     <li>• Web-разработчик</li>
                     <li>• 1С-разработчик</li>
@@ -109,7 +109,7 @@
     </div>
     <h5>Наши координаты:</h5>
     <p class="adres">664074, г. Иркутск, ул. Лермонтова 83</p>
-    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A59e4b4134e77875114d408d246462a9f2ac363d6d0e7858eef7d40a618960e41&amp;width=100%&amp;height=250&amp;lang=ru_RU&amp;scroll=true">
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A59e4b4134e77875114d408d246462a9f2ac363d6d0e7858eef7d40a618960e41&amp;width=100%25&amp;height=250&amp;lang=ru_RU&amp;scroll=true">
     </script>
     <footer class="contacts">
         <div class="container">
