--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
    ym(91653984, "init", {
         clickmap:true,
         trackLinks:true,
-        accurateTrackBounce:true
+        accurateTrackBounce:true,
+        webvisor:true
    });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/91653984" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
